trunk/Archive2/2c/765f09e24a6058/output
main.cpp: In function 'int main(int, char**)':
main.cpp:19:8: error: invalid conversion from 'int' to 'int*' [-fpermissive]
    ptr = *temp;
        ^
